--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "concurrently --kill-others \"npm run start\" \"npm run server\"",
+    "server": "json-server --watch db.json --port 3000"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@ngrx/store": "^7.1.0",
     "bootstrap": "^4.2.1",
+    "concurrently": "^4.1.0",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
     "rxjs": "~6.3.3",
